--- a/index.html
+++ b/index.html
@@ -33,18 +33,27 @@
       <div class="container">
         <img class="logo" src="/assets/images/logo.png" alt="News29 Logo" />
         <div class="social">
-          <a href="http://facebook.com" target="_blank"
-            ><i class="fab fa-facebook-square fa-2x"></i
-          ></a>
-          <a href="http://twitter.com" target="_blank"
-            ><i class="fab fa-twitter-square fa-2x"></i
-          ></a>
-          <a href="http://instagram.com" target="_blank"
-            ><i class="fab fa-instagram-square fa-2x"></i
-          ></a>
-          <a href="http://youtube.com" target="_blank"
-            ><i class="fab fa-youtube-square fa-2x"></i
-          ></a>
+           <a
+              href="https://web.facebook.com/cyrus.codes/"
+              target="_blank"
+              class="social-link"
+            >
+              <i class="fab fa-facebook-f"></i
+            ></a>
+            <a
+              href="https://twitter.com/cyrusCodes"
+              target="_blank"
+              class="social-link"
+            >
+              <i class="fab fa-twitter"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/cyruscodes/"
+              target="_blank"
+              class="social-link"
+            >
+              <i class="fas fa-hashtag"></i
+            ></a>
         </div>
         <ul>
           <li><a href="index.html" class="current">Home</a></li>
