sort logo appearance

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <!--! Top Website Navigation menu -->
     <nav id="main-nav">
       <div class="container">
-        <img class="logo" src="/assets/images/logo.png" alt="News29 Logo" />
+        <a href="index.html"><img class="logo" src="logo.png" alt="News29 Logo" /></a>
+        
         <div class="social">
            <a
               href="https://web.facebook.com/cyrus.codes/"
@@ -190,7 +191,7 @@
     <footer id="main-footer" class="py-2">
       <div class="container footer-container">
         <div>
-          <img src="/assets/images/logo.png" alt="News29 Logo" srcset="" />
+         <a href="index.html"><img src="logo.png" alt="News29 Logo" srcset="" /></a> 
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
             tempora atque cum esse ea possimus sed at explicabo vitae alias!
